# LunchFinder/Api/swagger.yaml
@@ -101,6 +101,103 @@ paths:
           description: ''
         404:
           description: ''
+  /api/Place:
+    get:
+      tags:
+      - Place
+      operationId: GetAllPlaces
+      responses:
+        200:
+          description: ''
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/Place'
+    post:
+      tags:
+      - Place
+      operationId: CreatePlace
+      requestBody:
+        x-name: place
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/Place'
+        required: true
+        x-position: 1
+      responses:
+        201:
+          description: ''
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Place'
+  /api/Place/{id}:
+    get:
+      tags:
+      - Place
+      operationId: GetPlaceById
+      parameters:
+      - name: id
+        in: path
+        required: true
+        schema:
+          type: integer
+          format: int32
+        x-position: 1
+      responses:
+        200:
+          description: ''
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Place'
+        404:
+          description: ''
+    put:
+      tags:
+      - Place
+      operationId: UpdatePlace
+      parameters:
+      - name: id
+        in: path
+        required: true
+        schema:
+          type: integer
+          format: int32
+        x-position: 1
+      requestBody:
+        x-name: place
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/Place'
+        required: true
+        x-position: 2
+      responses:
+        200:
+          description: ''
+        404:
+          description: ''
+    delete:
+      tags:
+      - Place
+      operationId: DeletePlace
+      parameters:
+      - name: id
+        in: path
+        required: true
+        schema:
+          type: integer
+          format: int32
+        x-position: 1
+      responses:
+        200:
+          description: ''
+        404:
+          description: ''
 components:
   schemas:
     Tag:
@@ -113,4 +210,53 @@ components:
         name:
           type: string
         description:
+          type: string
+    Place:
+      type: object
+      additionalProperties: false
+      properties:
+        id:
+          type: integer
+          format: int32
+        name:
+          type: string
+        description:
+          type: string
+        tags:
+          type: array
+          items:
+            $ref: '#/components/schemas/Tag'
+        address:
+          $ref: '#/components/schemas/Address'
+        contactInformation:
+          type: array
+          items:
+            $ref: '#/components/schemas/ContactInformation'
+    Address:
+      type: object
+      additionalProperties: false
+      properties:
+        id:
+          type: integer
+          format: int32
+        street:
+          type: string
+        city:
+          type: string
+        number:
+          type: string
+        postalCode:
+          type: string
+        country:
+          type: string
+    ContactInformation:
+      type: object
+      additionalProperties: false
+      properties:
+        id:
+          type: integer
+          format: int32
+        description:
+          type: string
+        value:
           type: string
